# clipboarder

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  install.sh  package-lock.json  package.json  sitemap.xml  tsconfig.tsbuildinfo
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: index.html
agents/.claude/skills/clipboarder/: SKILL.md
architecture/: index.html
architecture/classification/: index.html
architecture/paste-back/: index.html
architecture/storage/: index.html
assets/stylesheets/: extra.css
cli-reference/: index.html
cli-reference/add/: index.html
cli-reference/copy/: index.html
cli-reference/delete/: index.html
cli-reference/list/: index.html
cli-reference/pin/: index.html
cli-reference/pipes/: index.html
cli-reference/search/: index.html
cli-reference/show/: index.html
cli-reference/stats/: index.html
cli-reference/watch/: index.html
contributing/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/agents/: index.md
docs/docs/architecture/: classification.md  index.md  paste-back.md  storage.md
docs/docs/assets/stylesheets/: extra.css
docs/docs/cli-reference/: add.md  copy.md  delete.md  index.md  list.md  pin.md  pipes.md  search.md  show.md  stats.md  watch.md
docs/docs/contributing/: index.md
docs/docs/getting-started/: index.md  installation.md  quickstart.md
docs/docs/server/: index.md
docs/docs/settings/: history.md  hotkey.md  index.md  launch-at-login.md  privacy.md
docs/docs/usage/: content-types.md  index.md  pinning.md  search.md  shortcuts.md
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: bench.sh  make_icon.py  test-cli.sh  test-server.sh
search/: search_index.json
server/: index.html
settings/: index.html
settings/history/: index.html
settings/hotkey/: index.html
settings/launch-at-login/: index.html
settings/privacy/: index.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: admin_ui.html  app_icons.rs  classify.rs  cli.rs  clipboard.rs  commands.rs  lib.rs  macos.rs  main.rs  paste.rs  secrets.rs  server.rs  server_config.rs  settings.rs  storage.rs  store.rs  url_meta.rs
src/components/: Chips.tsx  HotkeyRecorder.tsx  PermissionBanner.tsx  Preview.tsx  RepoCard.tsx  Row.tsx  Select.tsx  Settings.tsx  Toggle.tsx  UrlCard.tsx
src/lib/: api.ts  color.ts  format.ts  hotkey.ts  icons.tsx  repo.ts  types.ts  useAppIcon.ts  useUrlMetadata.ts
usage/: index.html
usage/content-types/: index.html
usage/pinning/: index.html
usage/search/: index.html
usage/shortcuts/: index.html
